--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,7 @@ pydantic==2.4.2
 pydantic-extra-types==2.1.0
 pydantic[email]==2.4.2
 python-multipart==0.0.6
+numpy==1.24.3
+pandas==1.5.3
+openpyxl==3.1.2
+xlrd==2.0.1
